TCOTA-788 adding messaging feature